move/Pci_8164.vb

	
    Declare Function B_8164_set_sa_move_all Lib "8164.DLL" Alias "_8164_set_sa_move_all" (ByVal TotalAx As Short, ByVal AxisArray() As Short, ByVal PosA() As Double, ByVal StrVelA() As Double, ByVal MaxVelA() As Double, ByVal TaccA() As Double, ByVal TdecA() As Double, ByVal SVaccA() As Double, ByVal SVdecA() As Double) As Short
    Declare Function B_8164_set_ta_move_all Lib "8164.DLL" Alias "_8164_set_ta_move_all" (ByVal TotalAx As Short, ByVal AxisArray() As Short, ByVal PosA() As Double, ByVal StrVelA() As Double, ByVal MaxVelA() As Double, ByVal TaccA() As Double, ByVal TdecA() As Double) As Short
    Declare Function B_8164_set_sr_move_all Lib "8164.DLL" Alias "_8164_set_sr_move_all" (ByVal TotalAx As Short, ByVal AxisArray() As Short, ByVal DistA() As Double, ByVal StrVelA() As Double, ByVal MaxVelA() As Double, ByVal TaccA() As Double, ByVal TdecA() As Double, ByVal SVaccA() As Double, ByVal SVdecA() As Double) As Short
	Declare Function B_8164_set_latch_source Lib "8164.DLL"  Alias "_8164_set_latch_source"(ByVal AxisNo As Short, ByVal ltc_src As Short) As Short	
	Declare Function B_8164_set_inp Lib "8164.DLL"  Alias "_8164_set_inp"(ByVal AxisNo As Short, ByVal inp_enable As Short, ByVal inp_logic As Short) As Short
	Declare Function B_8164_set_idle_pulse Lib "8164.DLL"  Alias "_8164_set_idle_pulse"(ByVal AxisNo As Short, ByVal idl_pulse As Short) As Short
	Declare Function B_8164_delay_time Lib "8164.DLL"  Alias "_8164_delay_time"(ByVal AxisNo As Short, ByVal miniSecond As Double) As Short
	Declare Function B_8164_set_pulser_ratio Lib "8164.DLL"  Alias "_8164_set_pulser_ratio"(ByVal AxisNo As Short, ByVal PDV As Short, ByVal PMG As Short) As Short
    Declare Function B_8164_pulser_r_line2 Lib "8164.DLL" Alias "_8164_pulser_r_line2" (ByVal CardNo As Short, ByVal AxisArray() As Short, ByVal DistX As Double, ByVal DistY As Double, ByVal SpeedLimit As Double) As Short
    Declare Function B_8164_pulser_r_arc2 Lib "8164.DLL" Alias "_8164_pulser_r_arc2" (ByVal CardNo As Short, ByVal AxisArray() As Short, ByVal OffsetCx As Double, ByVal OffsetCy As Double, ByVal OffsetEx As Double, ByVal OffsetEy As Double, ByVal DIR_Renamed As Short, ByVal MaxVel As Double) As Short
    Declare Function B_8164_pulser_a_line2 Lib "8164.DLL" Alias "_8164_pulser_a_line2" (ByVal CardNo As Short, ByVal AxisArray() As Short, ByVal PosX As Short, ByVal PosY As Short, ByVal SpeedLimit As Short) As Short
    Declare Function B_8164_pulser_a_arc2 Lib "8164.DLL" Alias "_8164_pulser_a_arc2" (ByVal CardNo As Short, ByVal AxisArray() As Short, ByVal Cx As Double, ByVal Cy As Double, ByVal Ex As Double, ByVal Ey As Double, ByVal DIR_Renamed As Short, ByVal MaxVel As Double) As Double
	
	Declare Function B_8164_escape_home Lib "8164.DLL"  Alias "_8164_escape_home"(ByVal AxisNo As Short, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double) As Short
	Declare Function B_8164_home_search Lib "8164.DLL"  Alias "_8164_home_search"(ByVal AxisNo As Short, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal ORGOffset As Double) As Short
	Declare Function B_8164_set_line_move_mode Lib "8164.DLL"  Alias "_8164_set_line_move_mode"(ByVal AxisNo As Short, ByVal mode As Short) As Short
	
	Declare Function B_8164_verify_speed Lib "8164.DLL"  Alias "_8164_verify_speed"(ByVal StrVel As Double, ByVal MaxVel As Double, ByRef minAccT As Double, ByRef maxAccT As Double, ByVal MaxSpeed As Double) As Double
	
    Declare Function B_8164_start_tr_arc_xyu Lib "8164.DLL" Alias "_8164_start_tr_arc_xyu" (ByVal CardNo As Short, ByVal OffsetCx As Double, ByVal OffsetCy As Double, ByVal OffsetEx As Double, ByVal OffsetEy As Double, ByVal DIR_Renamed As Short, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double) As Short
    Declare Function B_8164_start_ta_arc_xyu Lib "8164.DLL" Alias "_8164_start_ta_arc_xyu" (ByVal CardNo As Short, ByVal Cx As Double, ByVal Cy As Double, ByVal Ex As Double, ByVal Ey As Double, ByVal DIR_Renamed As Short, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double) As Short
	Declare Function B_8164_start_sr_arc_xyu Lib "8164.DLL"  Alias "_8164_start_sr_arc_xyu"(ByVal CardNo As Short, ByVal OffsetCx As Double, ByVal OffsetCy As Double, ByVal OffsetEx As Double, ByVal OffsetEy As Double, ByVal DIR_Renamed As Short, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double) As Short
	Declare Function B_8164_start_sa_arc_xyu Lib "8164.DLL"  Alias "_8164_start_sa_arc_xyu"(ByVal CardNo As Short, ByVal Cx As Double, ByVal Cy As Double, ByVal Ex As Double, ByVal Ey As Double, ByVal DIR_Renamed As Short, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal SVacc As Double) As Short
	Declare Function B_8164_start_tr_arc_yzu Lib "8164.DLL"  Alias "_8164_start_tr_arc_yzu"(ByVal CardNo As Short, ByVal OffsetCx As Double, ByVal OffsetCy As Double, ByVal OffsetEx As Double, ByVal OffsetEy As Double, ByVal DIR_Renamed As Short, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double) As Short
	Declare Function B_8164_start_ta_arc_yzu Lib "8164.DLL"  Alias "_8164_start_ta_arc_yzu"(ByVal CardNo As Short, ByVal Cx As Double, ByVal Cy As Double, ByVal Ex As Double, ByVal Ey As Double, ByVal DIR_Renamed As Short, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double) As Short
	Declare Function B_8164_start_sr_arc_yzu Lib "8164.DLL"  Alias "_8164_start_sr_arc_yzu"(ByVal CardNo As Short, ByVal OffsetCx As Double, ByVal OffsetCy As Double, ByVal OffsetEx As Double, ByVal OffsetEy As Double, ByVal DIR_Renamed As Short, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double) As Short
	Declare Function B_8164_start_sa_arc_yzu Lib "8164.DLL"  Alias "_8164_start_sa_arc_yzu"(ByVal CardNo As Short, ByVal Cx As Double, ByVal Cy As Double, ByVal Ex As Double, ByVal Ey As Double, ByVal DIR_Renamed As Short, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal SVacc As Double) As Short
	
	Declare Function B_8164_start_tr_arc2 Lib "8164.DLL" Alias "_8164_start_tr_arc2" (ByVal CardNo As Short, ByVal AxisArray() As Short, ByVal OffsetCx As Double, ByVal OffsetCy As Double, ByVal OffsetEx As Double, ByVal OffsetEy As Double, ByVal DIR_Renamed As Short, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Short
	Declare Function B_8164_start_ta_arc2 Lib "8164.DLL" Alias "_8164_start_ta_arc2" (ByVal CardNo As Short, ByVal AxisArray() As Short, ByVal Cx As Double, ByVal Cy As Double, ByVal Ex As Double, ByVal Ey As Double, ByVal DIR_Renamed As Short, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Short
	Declare Function B_8164_start_sr_arc2 Lib "8164.DLL" Alias "_8164_start_sr_arc2" (ByVal CardNo As Short, ByVal AxisArray() As Short, ByVal OffsetCx As Double, ByVal OffsetCy As Double, ByVal OffsetEx As Double, ByVal OffsetEy As Double, ByVal DIR_Renamed As Short, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Short
	Declare Function B_8164_start_sa_arc2 Lib "8164.DLL" Alias "_8164_start_sa_arc2" (ByVal CardNo As Short, ByVal AxisArray() As Short, ByVal Cx As Double, ByVal Cy As Double, ByVal Ex As Double, ByVal Ey As Double, ByVal DIR_Renamed As Short, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Short
	
	Declare Function B_8164_start_tr_arc_xy Lib "8164.DLL"  Alias "_8164_start_tr_arc_xy"(ByVal CardNo As Short, ByVal OffsetCx As Double, ByVal OffsetCy As Double, ByVal OffsetEx As Double, ByVal OffsetEy As Double, ByVal DIR_Renamed As Short, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Short
	Declare Function B_8164_start_ta_arc_xy Lib "8164.DLL"  Alias "_8164_start_ta_arc_xy"(ByVal CardNo As Short, ByVal Cx As Double, ByVal Cy As Double, ByVal Ex As Double, ByVal Ey As Double, ByVal DIR_Renamed As Short, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Short
	Declare Function B_8164_start_tr_arc_zu Lib "8164.DLL"  Alias "_8164_start_tr_arc_zu"(ByVal CardNo As Short, ByVal OffsetCx As Double, ByVal OffsetCy As Double, ByVal OffsetEx As Double, ByVal OffsetEy As Double, ByVal DIR_Renamed As Short, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Short
	Declare Function B_8164_start_ta_arc_zu Lib "8164.DLL"  Alias "_8164_start_ta_arc_zu"(ByVal CardNo As Short, ByVal Cx As Double, ByVal Cy As Double, ByVal Ex As Double, ByVal Ey As Double, ByVal DIR_Renamed As Short, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Short
	
	Declare Function B_8164_start_sr_arc_xy Lib "8164.DLL"  Alias "_8164_start_sr_arc_xy"(ByVal CardNo As Short, ByVal OffsetCx As Double, ByVal OffsetCy As Double, ByVal OffsetEx As Double, ByVal OffsetEy As Double, ByVal DIR_Renamed As Short, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Short
	Declare Function B_8164_start_sa_arc_xy Lib "8164.DLL"  Alias "_8164_start_sa_arc_xy"(ByVal CardNo As Short, ByVal Cx As Double, ByVal Cy As Double, ByVal Ex As Double, ByVal Ey As Double, ByVal DIR_Renamed As Short, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Short
	Declare Function B_8164_start_sr_arc_zu Lib "8164.DLL"  Alias "_8164_start_sr_arc_zu"(ByVal CardNo As Short, ByVal OffsetCx As Double, ByVal OffsetCy As Double, ByVal OffsetEx As Double, ByVal OffsetEy As Double, ByVal DIR_Renamed As Short, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Short
	Declare Function B_8164_start_sa_arc_zu Lib "8164.DLL"  Alias "_8164_start_sa_arc_zu"(ByVal CardNo As Short, ByVal Cx As Double, ByVal Cy As Double, ByVal Ex As Double, ByVal Ey As Double, ByVal DIR_Renamed As Short, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Short
	
	Declare Function B_8164_set_sync_option Lib "8164.DLL"  Alias "_8164_set_sync_option"(ByVal AxisNo As Short, ByVal sync_stop_on As Short, ByVal cstop_output_on As Short, ByVal sync_option1 As Short, ByVal sync_option2 As Short) As Short
	Declare Function B_8164_mask_axis_stop_int Lib "8164.DLL"  Alias "_8164_mask_axis_stop_int"(ByVal AxisNo As Short, ByVal int_disable As Short) As Short
	Declare Function B_8164_set_axis_option Lib "8164.DLL"  Alias "_8164_set_axis_option"(ByVal AxisNo As Short, ByVal option1 As Short) As Short
	Declare Function B_8164_set_axis_stop_int Lib "8164.DLL"  Alias "_8164_set_axis_stop_int"(ByVal AxisNo As Short, ByVal axis_stop_int As Short) As Short
	Declare Function B_8164_version_info Lib "8164.DLL"  Alias "_8164_version_info"(ByVal CardNo As Short, ByRef HardwareInfo As Short, ByRef SoftwareInfo As Short, ByRef DriverInfo As Short) As Short
	Declare Function B_8164_set_sync_stop_mode Lib "8164.DLL"  Alias "_8164_set_sync_stop_mode"(ByVal AxisNo As Short, ByVal stop_mode As Short) As Short
	
	Declare Function B_8164_set_sync_signal_source Lib "8164.DLL"  Alias "_8164_set_sync_signal_source"(ByVal AxisNo As Short, ByVal sync_axis As Short) As Short
	Declare Function B_8164_set_sync_signal_mode Lib "8164.DLL"  Alias "_8164_set_sync_signal_mode"(ByVal AxisNo As Short, ByVal mode As Short) As Short
    Declare Function B_8164_start_ta_pickplace Lib "8164.DLL" Alias "_8164_start_ta_pickplace" (ByRef AxisPair2 As Short, ByRef Pos3 As Double, ByRef SVel3 As Double, ByRef MVel3 As Double, ByRef AccT3 As Double, ByRef StartPoint2 As Double) As Short
